Fix the wrong font address
The wrong font address has been fixed: from "../asset/fonts/" to "../fonts/"

--- a/source/asset/sass/fonts.scss
+++ b/source/asset/sass/fonts.scss
@@ -14,8 +14,8 @@
   src:
     local("TTNorms Regular"),
     local("TTNorms-Regular"),
-    url("../asset/fonts/TTNorms-Regular.woff2") format("woff2"),
-    url("../asset/fonts/TTNorms-Regular.woff") format("woff");
+    url("../fonts/TTNorms-Regular.woff2") format("woff2"),
+    url("../fonts/TTNorms-Regular.woff") format("woff");
 }
 
 
@@ -35,6 +35,6 @@
   src:
     local("PFRegalDisplayPro Italic"),
     local("PFRegalDisplayPro-Italic"),
-    url("../asset/fonts/PFRegalDisplayPro-Italic.woff2") format("woff2"),
-    url("../asset/fonts/PFRegalDisplayPro-Italic.woff") format("woff");
+    url("../fonts/PFRegalDisplayPro-Italic.woff2") format("woff2"),
+    url("../fonts/PFRegalDisplayPro-Italic.woff") format("woff");
 }
